# simple-oxidized-python

./: .gitignore  Cargo.toml  README.md
cabi/: Cargo.toml  build.rs  simple.h
cabi/src/: lib.rs
py/: setup.py
py/simple/: __init__.py
simple-rs/: Cargo.toml
simple-rs/src/: lib.rs
